force-app/main/default/objects/Contact/fields/Business_Website__c.field-meta.xml
<CustomField>
    <fullName>Business_Website__c</fullName>
    <label>Business Website</label>
    <type>Url</type>
</CustomField>