force-app/main/default/objects/Contact/fields/Copy_Account_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Copy_Account_Contact_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box and clicking save will overwrite the existing contact information and use their related account information.</inlineHelpText>
    <label>Copy Account Contact Info</label>
    <type>Checkbox</type>
</CustomField>