force-app/main/default/objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <inlineHelpText>What is the extension of this person&apos;s phone number?</inlineHelpText>
    <label>Extension</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>