force-app/main/default/objects/Contact/fields/Is_From_ACT__c.field-meta.xml
<CustomField>
    <fullName>Is_From_ACT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From ACT?</label>
    <type>Checkbox</type>
</CustomField>