force-app/main/default/objects/Contact/fields/Job_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Job_Level_1__c</fullName>
    <label>Job Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Contact</fullName>
            </value>
            <value>
                <fullName>External Contact</fullName>
                <default>true</default>
                <label>External Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>