force-app/main/default/objects/Contact/fields/Job_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Job_Level_2__c</fullName>
    <label>Job Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A/E Firm</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Principal / Manufacturer</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Vendor / Supplier</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Manufacturers Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>