force-app/main/default/objects/Contact/fields/Job_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Job_Level_3__c</fullName>
    <label>Job Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Job_Level_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mechanical Contractor</fullName>
            </value>
            <value>
                <fullName>Electrical Contractor</fullName>
            </value>
            <value>
                <fullName>Plumbing Contractor</fullName>
            </value>
            <value>
                <fullName>Controls / Energy Contractor</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Engineering Firm</fullName>
            </value>
            <value>
                <fullName>Architectural Firm</fullName>
            </value>
            <value>
                <fullName>Commercial / Light Industrial User</fullName>
            </value>
            <value>
                <fullName>Heavy Industrial User</fullName>
            </value>
            <value>
                <fullName>Power User</fullName>
            </value>
            <value>
                <fullName>Competitve Vendor</fullName>
            </value>
            <value>
                <fullName>Non-Competive Vendor</fullName>
            </value>
            <value>
                <fullName>Indoor Cultivator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>