force-app/main/default/objects/Contact/fields/Sync__c.field-meta.xml
<CustomField>
    <fullName>Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Address with Account</label>
    <type>Checkbox</type>
</CustomField>